Backend/Kubernetes/deployments/saleorder-data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleorderdataservice
  namespace: ecommerce-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saleorderdataservice
  template:
    metadata:
      labels:
        app: saleorderdataservice
    spec:
      containers:
      - name: saleorderdataservice
        image: backend-saleorderdataservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: saleorderdataservice
  namespace: ecommerce-app
spec:
  selector:
    app: saleorderdataservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30083  # NodePort for external access (choose a port in the range 30000-32767)
  type: NodePort
